# fitting-curvature

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  THREEJS_MIGRATION.md  config.toml  main.py  plot_experiment_1.py  pyproject.toml
.github/workflows/: test.yml
src/: affinities.py  embedding.py  kernels.py  load_data.py  manifolds.py  matrices.py  metrics.py  riemannian_optimizer.py  samplers.py  synthetic_data.py  types.py  visualisation.py
test/: README.md  conftest.py  test_grad.py  test_initialization.py  test_integration.py  test_matrix_perf.py  test_metrics.py  test_perf.py  test_rsgd.py  test_samplers.py  test_synthetic.py  test_tsne.py  test_web.py
web/: README.md  app.py  config_manager.py  instructions.md  training_manager.py
web/components/: config_editor.py  plots.py  threejs_plot.py  training_control.py
web/static/: app.js  index.html  loss_chart.js  style.css  threejs_plot.js
