[project]
name = "fitting-curvature"
version = "0.1.0"
description = "Learn the curvature of your data and fit an embedding into it."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "matplotlib>=3.10.7",
    "pytest>=9.0.2",
    "scikit-learn>=1.5.0",
    "toml>=0.10.2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0",
]
